2009-01-24  Curtis Gedak  <gedakc@gmail.com>

	* gparted.desktop.in.in: Added additional Filesystem category.
	  - Closes GParted bug #568937

	* src/Dialog_Partition_Copy.cc,
	  src/Win_GParted.cc: Enhanced copy/paste checks when MBR/EBR involved.
	  - Closes GParted bug #567402

2009-01-20  Curtis Gedak  <gedakc@gmail.com>

	* doc/gparted.8: Updated manual page.

2009-01-19  Curtis Gedak  <gedakc@gmail.com>

	* src/Win_GParted.cc: Reworded message when applying operations.
	  - Closes GParted bug #564952

2009-01-13  Curtis Gedak  <gedakc@gmail.com>

	* src/Win_GParted.cc: Removed space between menu entry and periods.

2009-01-07  Curtis Gedak  <gedakc@gmail.com>

	* src/ntfs.cc: Removed redundant command flag options.

2009-01-06  Curtis Gedak  <gedakc@gmail.com>

	* src/GParted_Core.cc: Actually commit this file, and
	                       remove src/Partition.o.

	* src/Win_GParted.cc: Redo update copyright year range, again.
	  - Updated copyright year in Help -> About.

	* src/GParted_Core.cc: Added two FS types to recognition as linux-swap.
	  - The GIT version of libparted returns types of linux-swap(new)
	    and linux-swap(old), previously only linux-swap was returned.
	  - Closes GParted bug #419515

	* src/Win_GParted.cc: Redo update copyright year range.
	  - In a recent upgrade to eclipse 3.4.0, I did not realize that
	    the default save option was to remove trailing whitespace, and
	    ensure newline at end of file.  This resulted in way too many
	    differences showing up in the file.

2009-01-03  Curtis Gedak  <gedakc@gmail.com>

	* src/Win_GParted.cc: Update copyright year range.

2009-01-02  Curtis Gedak  <gedakc@gmail.com>

	* configure.in: Improved text for libparted not found error message.
	  - Closes GParted bug #565682

2008-12-31  Curtis Gedak  <gedakc@gmail.com>

	* src/Utils.cc: Added e2fsprogs version required for ext4 support.

2008-12-21  Curtis Gedak  <gedakc@gmail.com>

	* src/Utils.cc: Fixed application crash.