@@ -1,3 +1,8 @@
+2009-01-28  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/GParted_Core.cc: Fixed partition type for linux-swap(new).
+	  - Related to GParted bug #419515
+
 2009-01-24  Curtis Gedak  <gedakc@gmail.com>
 
 	* gparted.desktop.in.in: Added additional Filesystem category.
@@ -5,7 +10,7 @@
 
 	* src/Dialog_Partition_Copy.cc,
 	  src/Win_GParted.cc: Enhanced copy/paste checks when MBR/EBR involved.
-	  - Closes GParted bug #567402
+	  - Related to GParted bug #567402
 
 2009-01-20  Curtis Gedak  <gedakc@gmail.com>
 
